--- a/style/style.css
+++ b/style/style.css
@@ -85,16 +85,16 @@ main{
 
 .about{
     text-align: center;
-    margin-top: 130px;
     background: #fff8f3;
     border-radius: 10PX;
     padding: 130PX 150PX;
 }
 
 .section-title{
+    text-align: center;
     font-weight: 700;
     font-size: 35PX;
-    margin-bottom: 30PX;
+    margin-bottom: 50PX;
 }
 
 .section-description{
@@ -118,3 +118,36 @@ main{
     font-size: 20px;
     color: #474747;
 }
+
+/* what i do */
+
+section{
+    margin-top: 130px;
+
+}
+
+.skill{
+    background: #FFFFFF;
+    box-shadow: 0px 6px 50px rgba(0, 0, 0, 0.06);
+    border-radius: 5px;
+    padding: 30px;
+}
+
+.skills-container{
+    display: flex;
+    gap: 24px;
+}
+
+.skill-title{
+    font-weight: 700;
+    font-size: 20px;
+    margin-top: 30px;
+    margin-bottom: 20px;
+}
+
+.skill-description{
+    color: #757575;
+}
+
+/* Resume */
+
