--- a/style/style.css
+++ b/style/style.css
@@ -24,7 +24,7 @@
 nav{
     display: flex;
     justify-content: space-between;
-    margin: 50px 200px;
+    padding: 50px 200px;
 }
 
 .nav-title{
